[gd_scene load_steps=3 format=3 uid="uid://brm28r12qqgnn"]

[ext_resource type="Script" path="res://hitmarker.gd" id="1_xrm7o"]
[ext_resource type="Texture2D" uid="uid://m2jw42wcl8cn" path="res://assets/hitmarker2.png" id="2_fs3fp"]

[node name="Hitmarker" type="Control"]
show_behind_parent = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_xrm7o")

[node name="crosshair" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.5
offset_top = -2.5
offset_right = 2.5
offset_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="EnemyHitMarker" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fs3fp")
expand_mode = 1

[node name="HitmarkerVisibilityTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.035
anchor_bottom = 0.035
offset_right = -0.32
offset_bottom = 0.32
text = "Score: "

[node name="PoleHealthbar" type="ProgressBar" parent="."]
modulate = Color(0, 0.737255, 0.360784, 1)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.8
anchor_right = 0.8
anchor_bottom = 0.9
offset_left = 1.0
offset_top = 0.159973
offset_right = -2.0
offset_bottom = -0.0560303
value = 100.0

[connection signal="timeout" from="HitmarkerVisibilityTimer" to="." method="_on_hitmarker_visibility_timer_timeout"]
